--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "motion-logic-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lod55.github.io/motion-logic-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -17,8 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.20.0"
+    "axios-mock-adapter": "^1.20.0",
+    "gh-pages": "^3.2.3"
   }
 }
